--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
     url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/333/original/image_%2821%29.jpg?1704443709");
 
-  opacity: 0.65;
+  opacity: 0.7;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
   padding: 200px 0;
-  margin:60px auto;
+  margin: 60px auto;
 }
 
 header h1 {
@@ -60,17 +60,16 @@ header a:hover {
 section {
   max-width: 100%;
   margin: 0 auto;
-  padding: 100px;
-  background-color: #F8F8F8;
+  padding: 70px;
 }
 
-main h3 {
-  font-size: 18px;
+h3 {
+  font-size: 23px;
   font-weight: 700;
   letter-spacing: 5px;
   opacity: 0.3;
 }
-main h2 {
+h2 {
   font-size: 40px;
 
   font-weight: 700;
@@ -88,7 +87,7 @@ main p {
 main a {
   color: black;
   border: 1px solid black;
-  opacity: 0.7;
+
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 3px;
@@ -106,6 +105,21 @@ main a:hover {
   color: #301c12;
   border: 1px solid;
 }
+
+.gallery-box {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 60px;
+  background-color: #f8f8f8;
+}
+
+.gallery-box h2 {
+  text-align: center;
+  letter-spacing: 25px;
+  opacity: 0.6;
+  font-family: "Dancing Script", cursive;
+}
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
@@ -117,18 +131,52 @@ main a:hover {
 .grid-two-columns {
   grid-template-columns: 1fr 1fr;
 }
+.grid-three-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
 .img-responsive {
   width: 100%;
   display: block;
   aspect-ratio: 1/1;
 }
 
+.gallery-responsive {
+  width: 100%;
+  display: block;
+  aspect-ratio: 1/1;
+  padding: 20px;
+  transition: all 500ms ease-in-out;
+}
+.gallery-responsive:hover {
+  transform: scale(1.2);
+}
+
+.gallery-box img {
+  border-radius: 35px;
+}
+
+#carouselExampleCaptions h4 {
+  text-align: center;
+  font-size: 40px;
+  letter-spacing: 15px;
+  opacity: 0.6;
+  font-family: "Dancing Script", cursive;
+  padding: 10px;
+}
+#carouselExampleCaptions {
+  padding: 20px;
+  margin-top: 60px;
+}
+#carouselExampleCaptions h5{
+  font-size: 25px;
+}
 .navbar {
   background-color: var(--main-color);
 }
 
 @media (max-width: 900px) {
-  .grid-two-columns {
+  .grid-two-columns,
+  .grid-three-columns {
     grid-template-columns: 1fr;
   }
 }
