--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 :root {
-  --main-color: #e8dbd2;
+  --main-color: #f8f8f8;
 }
 
 body {
   font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 100%;
+}
+html,
+body {
+  height: 100%;
 }
 
 header {
@@ -15,42 +21,44 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  padding: 200px 0;
-  margin: 60px auto;
+  height: 100%;
 }
 
 header h1 {
-  font-size: 72px;
+  font-size: 120px;
   font-weight: 700;
   letter-spacing: 7.2px;
   font-family: "Dancing Script", cursive;
   color: white;
   text-shadow: 1px 1px 2px black;
+  padding: 160px 0;
 }
 header p {
-  font-size: 20px;
+  font-size: 35px;
   font-weight: 400;
   line-height: 30px;
   color: white;
   text-shadow: 2px 2px 2px black;
   font-style: italic;
   letter-spacing: 15px;
-  padding: 40px;
+  padding: 0px;
+  margin: 0 auto;
 }
 
 header a {
   color: black;
-  font-size: 14px;
+  font-size: 22px;
   font-weight: 700;
   letter-spacing: 3px;
   background-color: rgba(255, 255, 255, 0.683);
   text-decoration: none;
-  padding: 16px 32px;
+  padding: 28px 56px;
   display: inline-block;
   transition: all 800ms ease-in-out;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-  margin-top: 22px;
+  margin-top: 200px;
+
 }
 header a:hover {
   border: 1px solid #060505;
@@ -110,7 +118,7 @@ main a:hover {
   max-width: 100%;
   margin: 0 auto;
   padding: 60px;
-  background-color: #f8f8f8;
+  background-color: var(--main-color);
 }
 
 .gallery-box h2 {
@@ -120,10 +128,6 @@ main a:hover {
   font-family: "Dancing Script", cursive;
 }
 
-.container {
-  max-width: 1400px;
-  margin: 0 auto;
-}
 .grid {
   display: grid;
   grid-gap: 55px;
@@ -167,7 +171,7 @@ main a:hover {
   padding: 20px;
   margin-top: 60px;
 }
-#carouselExampleCaptions h5{
+#carouselExampleCaptions h5 {
   font-size: 25px;
 }
 .navbar {
