--- a/style.css
+++ b/style.css
@@ -45,8 +45,9 @@ header p {
   margin: 0 auto;
 }
 
-header a {
+header .button {
   color: black;
+  border: none;
   font-size: 22px;
   font-weight: 700;
   letter-spacing: 3px;
@@ -59,10 +60,11 @@ header a {
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
   margin-top: 200px;
 }
-header a:hover {
-  border: 1px solid #060505;
+header .button:hover {
   background-color: #f4e7e7;
   color: #180101;
+  border: none;
+  border-radius: 20px;
 }
 section {
   max-width: 100%;
@@ -91,8 +93,7 @@ main p {
   opacity: 0.7;
 }
 
-main a,
-footer a {
+.button {
   color: black;
   border: 1px solid black;
 
@@ -108,42 +109,22 @@ footer a {
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
   margin-top: 22px;
 }
-main a:hover {
+.button:hover {
   background-color: var(--main-color);
   color: #301c12;
   border: 1px solid;
-}
-
-footer {
-  margin: 200px 0;
-  padding: 80px 120px;
   border-radius: 10px;
-  background-image: linear-gradient(
-      rgba(35, 71, 103, 0.6),
-      rgba(35, 71, 103, 0.7)
-    ),
-    url("https://img.freepik.com/free-photo/fuji-mountain-cherry-blossoms-spring-japan_335224-231.jpg?w=1800&t=st=1704730476~exp=1704731076~hmac=0341a7560c8ce9e6336c76abdf8daba3f96a1583609a37c7c279e667b90f60e0");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
-
-.banner {
-  font-size: 50px;
-  color: white;
-  font-family: "Dancing Script", cursive;
-}
-.banner-paragraph {
-  color: white;
-font-size: 17px;}
 
 .gallery-container {
   background-color: #f0edec63;
+  width: 100%;
 }
 .gallery-box {
   margin: auto;
-  width: 1800px;
+  width: 1600px;
   height: 800px;
+  aspect-ratio: auto;
 }
 
 .gallery-responsive {
@@ -157,14 +138,106 @@ font-size: 17px;}
   letter-spacing: 25px;
   opacity: 0.6;
   font-family: "Dancing Script", cursive;
-  padding: 16px 32px;
+  padding: 16px;
+  margin: 0;
 }
 .gallery-box h3 {
-  padding: 16px 32px;
+  padding: 16px;
   font-size: 38px;
   letter-spacing: 12px;
+  margin: 0;
 }
 
+footer {
+  margin: 70px 0;
+  padding: 20px;
+  border-radius: 8px;
+  background-image: linear-gradient(
+      rgba(35, 71, 103, 0.8),
+      rgba(35, 71, 103, 0.8)
+    ),
+    url("https://img.freepik.com/free-photo/fuji-mountain-cherry-blossoms-spring-japan_335224-231.jpg?w=1800&t=st=1704730476~exp=1704731076~hmac=0341a7560c8ce9e6336c76abdf8daba3f96a1583609a37c7c279e667b90f60e0");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.banner {
+  font-size: 50px;
+  color: white;
+  font-family: "Dancing Script", cursive;
+  margin: 0;
+  padding: 10px;
+}
+.banner-paragraph {
+  color: white;
+  font-size: 19px;
+  margin: 0;
+  padding: 10px;
+  line-height: 1.5;
+}
+
+.banner-button {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  padding: 0;
+}
+
+footer .button {
+  color: white;
+  border: 1px solid rgb(188, 178, 178);
+
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  background-color: #f1f0ee46;
+  text-decoration: none;
+  padding: 16px 32px;
+  display: inline-block;
+  transition: all 800ms ease-in-out;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  margin-top: 22px;
+}
+
+.social-links a {
+  margin: 0 20px;
+  transition: all 500ms ease-in-out;
+  background-color: #f1f0ee;
+
+  padding: 14px 20px;
+  font-size: 26px;
+}
+.social-links a:hover {
+  background-color: var(--main-color);
+  color: #301c12;
+  border: 1px solid;
+  border-radius: 10px;
+}
+.project-info {
+  font-size: 20px;
+}
+.coder {
+  font-family: "Dancing Script", cursive;
+  font-size: 32px;
+  font-weight: 500;
+  margin: 0 auto;
+  padding: 0 auto;
+}
+
+.sheCodes {
+  font-size: 20px;
+  margin: 0px;
+  padding: 20px;
+}
+.sheCodes a {
+  text-decoration: none;
+  color: #885df1;
+}
+.sheCodes a:hover {
+  color: black;
+}
 .grid {
   display: grid;
   grid-gap: 55px;
@@ -282,5 +355,7 @@ img {
 
   .gallery-box {
     width: 100%;
+    height: 100%;
+    aspect-ratio: 1/1;
   }
 }
