--- a/style.css
+++ b/style.css
@@ -352,10 +352,63 @@ img {
   .grid-three-columns {
     grid-template-columns: 1fr;
   }
+  header {
+    width: 100%;
+    aspect-ratio: 16/9;
+  }
+
+  header h1 {
+    font-size: 60px;
+    padding: 50px 0;
+  }
+  header p {
+    font-size: 25px;
+
+    letter-spacing: normal;
+  }
+  header .button {
+    font-size: 18px;
+    padding: 14px 32px;
+    margin-top: 100px;
+  }
+
+  #mountain {
+    display: none;
+  }
 
   .gallery-box {
     width: 100%;
     height: 100%;
-    aspect-ratio: 1/1;
+    aspect-ratio: 16/9;
   }
+
+  .img-responsive,
+  .caption-container,
+  .demo,
+  .numbertext {
+    display: none;
+  }
+
+  section {
+    padding: 35px;
+  }
+
+  .gallery-box h2 {
+    letter-spacing: normal;
+    font-size: 28px;
+  }
+
+  .gallery-box h3 {
+    font-size: 18px;
+    padding: 0 auto;
+    margin: 0 auto;
+  }
+  .banner{ font-size: 25px;}
+  .banner-paragraph{ font-size: 15px;}
+  .project-info {
+  font-size: 15px;
+}
+  .coder{font-size: 20px;}
+  .sheCodes {
+  font-size: 15px;}
 }
